# vm0

./: .clang-format  CMakeLists.txt  idris2-vm0-lib.ipkg  idris2-vm0.ipkg  pack.toml
idris2-vm0/src/Language/VM0/: AST.idr
idris2-vm0/test/: test.ipkg
include/: vm0.h
src/: vm0.c  vm0.config.h.in
